--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ footer-links:
   email: #
   facebook: #https://www.facebook.com/<>
   flickr: #https://www.flickr.com/<>
-  github: Model-organism/S.D.C.O #https://github.com/<>
+  github: #Model-organism/S.D.C.O https://github.com/<>
   instagram: #https://instagram.com/<>
   linkedin: #https://www.linkedin.com/in/<>
   pinterest: #https://www.pinterest.com/<>
