--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ avatar: https://raw.githubusercontent.com/FromEndWorld/LOFFER/master/images/logo
 # 你的favicon（出现在浏览器tab上）图片URL，建议使用较小(64px × 64px)的图片
 favicon: https://raw.githubusercontent.com/FromEndWorld/LOFFER/master/images/favicon.png
 
+
 # 菜单中的按钮
 navigation:
   - name: 首页
@@ -44,7 +45,7 @@ footer-links:
   email: dantaliond@163.com
   facebook: #https://www.facebook.com/<>
   flickr: #https://www.flickr.com/<>
-  github: #Model-organism/S.D.C.O https://github.com/<>
+  github: Model-organism/S.D.C.O #https://github.com/<>
   instagram: #https://instagram.com/<>
   linkedin: #https://www.linkedin.com/in/<>
   pinterest: #https://www.pinterest.com/<>
